--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
