--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
-  "name": "my-quizlet",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.17.0",
-    "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
-    "framer-motion": "^11.3.19",
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "prisma": "^5.17.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "my-quizlet",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"seed": "node seed.ts"
+	},
+	"dependencies": {
+		"@next-auth/prisma-adapter": "^1.0.7",
+		"@prisma/client": "^5.17.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"axios": "^1.7.2",
+		"bcrypt": "^5.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.1.8",
+		"framer-motion": "^11.3.19",
+		"lucide-react": "^0.418.0",
+		"next": "14.2.5",
+		"next-auth": "^4.24.7",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.52.1",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^5.2.1",
+		"shadcn": "^1.0.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"postcss": "^8",
+		"prisma": "^5.17.0",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
