--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"seed": "node seed.ts"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@next-auth/prisma-adapter": "^1.0.7",
 		"@prisma/client": "^5.17.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"axios": "^1.7.2",
 		"bcrypt": "^5.1.1",
@@ -27,6 +29,7 @@
 		"react-hook-form": "^7.52.1",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^5.2.1",
+		"react-intersection-observer": "^9.13.0",
 		"shadcn": "^1.0.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7"
